--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,12 +4,14 @@ html {
    font-family: sans-serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
- }
+}
  
- body {
+body {
    margin: 0;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
- }
+}
 
-@import './4_layouts/_layout.scss'
+@import './3_regions/_header.scss';
+@import './4_layouts/_index.scss';
+@import './3_regions/_footer.scss';
