--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,6 +4,8 @@ html {
    font-family: sans-serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
+   height: 100%;
+   font-size: 10px;
 }
  
 body {
