--- a/styles/3_regions/_header.scss
+++ b/styles/3_regions/_header.scss
@@ -38,11 +38,70 @@
    }
 
    &__navigation {
+      padding: 0 1rem;
+      background: white;
+      height: 100vh;
+      left: 0;
+      opacity: 0;
+      pointer-events: none;
       position: absolute;
-      width: 100%;
       top: 100%;
-      background: red;
-      display: none;
-      flex-direction: column;
+      -webkit-transition: all .25s ease,visibility 0s .25s;
+      transition: all .25s ease,visibility 0s .25s;
+      visibility: hidden;
+      width: 100%;
+      will-change: opacity,visibility;
+      z-index: 13;
+
+      &--inner {
+         height: 100%;
+         opacity: 0;
+         position: relative;
+         transform: rotateX(-60deg);
+         transform-origin: 50% 0;
+         transition: all .25s ease,visibility 0s .25s;
+         visibility: hidden;
+         will-change: opacity,transform,visibility;
+         display: flex;
+         flex-direction: column;
+         font-size: 2rem;
+
+         &--open {
+            transform: none;
+            opacity: 1;
+            transition: all .25s ease,opacity .1s ease;
+            visibility: visible;
+            transform-origin: 50% 0;
+         }
+
+         &-link {
+            margin: .3rem 0;
+            color: $blue;
+            text-decoration: none;
+            background-color: #f4f4f4;
+            padding: 1.995rem 1.5rem 1.995rem 2.4rem;
+         }
+
+         &-link-active {
+            color: $red;
+
+            &:before {
+               content: '';
+               display: inline-block;
+               height: 2px;
+               width: 15px;
+               background: $red;
+               margin-right: 1rem;
+               margin-bottom: 0.5rem;
+            }
+         }
+      }
+
+      &--open {
+         opacity: 1;
+         transition: all .25s ease,opacity .1s ease;
+         visibility: visible;
+         pointer-events: auto;
+      }
    }
 }
