--- a/styles/3_regions/_header.scss
+++ b/styles/3_regions/_header.scss
@@ -6,18 +6,37 @@
    width: 100%;
    background: white;
    border-bottom: 1px solid #f2f2f2;
+   z-index: 1;
+
+   @media (min-width: 1280px) {
+      margin-top: 35px;
+   }
+   
+   .wrapper {
+      align-items: center;
+      justify-content: space-between;
+   }
 
    &__logo-container {
-      height: 74px;
-      width: 74px;
+      height: 75px;
+      width: 75px;
       position: relative;
-      bottom: 3px;
+      bottom: 1px;
+
+      @media (min-width: 1280px) {
+         height: 90px;
+         width: 90px;
+      }
    }
 
 
    &__cta-hamburger-container {
       display: flex;
       align-items: center;
+
+      @media (min-width: 1280px) {
+         display: none;
+      }
 
       &-cta-call-now {
          background: #0A0A86;
@@ -53,6 +72,16 @@
       will-change: opacity,visibility;
       z-index: 13;
 
+      @media (min-width: 1280px) {
+         padding: 0;
+         width: 55rem;
+         position: relative;
+         height: auto;
+         opacity: 1;
+         visibility: visible;
+         pointer-events: auto;
+      }
+
       &--inner {
          height: 100%;
          opacity: 0;
@@ -65,6 +94,15 @@
          display: flex;
          flex-direction: column;
          font-size: 2rem;
+
+         @media (min-width: 1280px) {
+            flex-direction: row;
+            justify-content: space-around;
+            visibility: visible;
+            opacity: 1;
+            transform: rotateX(0deg);
+            transform-origin: 0;
+         }
 
          &--open {
             transform: none;
@@ -80,6 +118,12 @@
             text-decoration: none;
             background-color: #f4f4f4;
             padding: 1.995rem 1.5rem 1.995rem 2.4rem;
+
+            @media (min-width: 1280px) {
+               background: white;
+               margin: 0;
+               padding: 0;
+            }
          }
 
          &-link-active {
@@ -93,6 +137,10 @@
                background: $red;
                margin-right: 1rem;
                margin-bottom: 0.5rem;
+
+               @media (min-width: 1280px) {
+                  display: none;
+               }
             }
          }
       }
