--- a/styles/4_layouts/_index.scss
+++ b/styles/4_layouts/_index.scss
@@ -1,7 +1,14 @@
 .spacer {
-   height: 80px;
+   height: 76px;
+
+   @media (min-width: 1280px) {
+      height: 126px;
+   }
 }
 
-// main {
-//    border: 1px solid $blue;
-// }
+.wrapper {
+   max-width: 1500px;
+   display: flex;
+   width: 100%;
+   margin: 0 auto;
+}
