--- a/styles/3_regions/_header.scss
+++ b/styles/3_regions/_header.scss
@@ -15,6 +15,11 @@
    .wrapper {
       align-items: center;
       justify-content: space-between;
+      padding-right: 0;
+      
+      @media (min-width: 1280px) and (max-width: 1500px) {
+         padding-right: 3rem;
+      }
    }
 
    &__logo-container {
@@ -52,7 +57,7 @@
       button {
          padding: .5rem;
          display: flex;
-         margin-right: 1rem;
+         margin-right: 1.25rem;
       }
    }
 
@@ -74,7 +79,7 @@
 
       @media (min-width: 1280px) {
          padding: 0;
-         width: 55rem;
+         width: 45rem;
          position: relative;
          height: auto;
          opacity: 1;
@@ -97,7 +102,7 @@
 
          @media (min-width: 1280px) {
             flex-direction: row;
-            justify-content: space-around;
+            justify-content: space-between;
             visibility: visible;
             opacity: 1;
             transform: rotateX(0deg);
